infra/main.tf
resource "aws_s3_bucket" "terraform_state" {
  bucket = "terraform-state-koodvoyage-sn"

  # whatever you do never change this to false, otherwise our whole state is gone
  lifecycle {
    prevent_destroy = true
  }
}

resource "aws_s3_bucket_versioning" "enabled" {
  bucket = aws_s3_bucket.terraform_state.id
  versioning_configuration {
    status = "Enabled"
  }
}

resource "aws_s3_bucket_server_side_encryption_configuration" "default" {
  bucket = aws_s3_bucket.terraform_state.id

  rule {
    apply_server_side_encryption_by_default {
      sse_algorithm = "AES256"
    }
  }
}

resource "aws_dynamodb_table" "terraform_locks" {
  name         = "terraform-koodvoyage-sn-state-locks"
  billing_mode = "PAY_PER_REQUEST"
  hash_key     = "LockID"

  attribute {
    name = "LockID"
    type = "S"
  }
}

resource "aws_s3_bucket_public_access_block" "public_access" {
  bucket                  = aws_s3_bucket.terraform_state.id
  block_public_acls       = true
  block_public_policy     = true
  ignore_public_acls      = true
  restrict_public_buckets = true
}

resource "aws_vpc" "dev_vpc" {
  cidr_block           = "10.123.0.0/16"
  enable_dns_hostnames = true //dont modify this guys
  enable_dns_support   = true //and this

  tags = {
    Name = "dev"
  }
}

resource "aws_subnet" "dev_public_subnet" {
  vpc_id                  = aws_vpc.dev_vpc.id
  cidr_block              = "10.123.1.0/24"
  map_public_ip_on_launch = true
  availability_zone       = "us-east-1a"


  tags = {
    Name = "dev-public-subnet"
  }
}

resource "aws_subnet" "dev_public_subnet" {
  vpc_id                  = aws_vpc.dev_vpc.id
  cidr_block              = "10.123.1.0/24"
  map_public_ip_on_launch = true
  availability_zone       = "us-east-1a"


  tags = {
    Name = "dev-public-subnet"
  }
}

//dont modify the following, guys

resource "aws_internet_gateway" "dev_internet_gateway" {
  vpc_id = aws_vpc.dev_vpc.id
  tags = {
    Name = "dev-igw"
  }
}

resource "aws_route_table" "dev_public_rt" {
  vpc_id = aws_vpc.dev_vpc.id
  tags = {
    Name = "dev_public_rt"
  }

}

resource "aws_route" "default_route" {
  route_table_id         = aws_route_table.dev_public_rt.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.dev_internet_gateway.id
}

resource "aws_route_table_association" "dev_public_association" {
  subnet_id      = aws_subnet.dev_public_subnet.id
  route_table_id = aws_route_table.dev_public_rt.id
}

resource "aws_security_group" "dev_sg" {
  name        = "dev_sg"
  description = "development security group for social network development environment"
  vpc_id      = aws_vpc.dev_vpc.id

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"] // will modify to allow only our developers
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# resource "aws_key_pair" "dev_auth" {
#     key_name = "devenvkey"
#     public_key = file("~/.ssh/devenvkey.pub")
# }

//if we need to vertically scale the instance later we can, but currently i think that t3.micro will suit all our needs.

resource "aws_instance" "dev_node_a1_docker_golangsvelte_development" {
  instance_type = "t3.micro"
  ami           = data.aws_ami.server_ami.id
  //key_name = aws_key_pair.dev_auth.id
  vpc_security_group_ids = [aws_security_group.dev_sg.id]
  subnet_id              = aws_subnet.dev_public_subnet.id

  #user_data = file("userdata.tpl")

  root_block_device {
    volume_size = 10
  }

  tags = {
    Name    = var.developer_name
    Feature = "auto provisioned"
  }

resource "aws_instance" "dev_node2_a1_docker_golangsvelte_development" {
  instance_type = "t3.micro"
  ami           = data.aws_ami.server_ami.id
  //key_name = aws_key_pair.dev_auth.id
  vpc_security_group_ids = [aws_security_group.dev_sg.id]
  subnet_id              = aws_subnet.dev_public_subnet.id

  #user_data = file("userdata.tpl")

  root_block_device {
    volume_size = 10
  }

  tags = {
    Name    = var.developer_name
    Feature = "auto provisioned"
  }

  # provisioner "local-exec" {
  #     command = templatefile("${var.host_os}-ssh-config.tpl", {
  #         hostname = self.public_ip,
  #         user = "ubuntu",
  #         identityfile = "~/.ssh/devenvkey"
  #     })
  #     interpreter = var.host_os == "windows" ? ["Powershell", "-Command"] : ["bash", "-c"]
  #}
}
